@@ -20,7 +20,7 @@ public class GetListMatchedIndexes extends Function<List<Long>> {
         List<Long> result = Lists.newArrayList();
         for (int i=0; i<list1.size(); i++) {
             if (list2.contains(list1.get(i))) {
-                result.add(new Long(i));
+                result.add(Long.valueOf(i));
             }
         }
         return result;
